--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=password
-spring.data.mongodb.database=rule_ideas_collector_test
+spring.mongodb.embedded.version=4.0.21
