Improved MongoDB local environment dockerizerd setup

--- a/environment/mongodb/docker-compose.yaml
+++ b/environment/mongodb/docker-compose.yaml
@@ -7,12 +7,14 @@ services:
        MONGO_INITDB_ROOT_USERNAME: admin
        MONGO_INITDB_ROOT_PASSWORD: password
        MONGO_INITDB_DATABASE: rule_ideas_collector_test
-    volumes:
-#      - mongodbdata:/data/db
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     ports:
       - "27017:27017"
     command: mongod
+    volumes:
+# TODO: consider if enabling volumes or not! For now it may conflict with the init script
+#      - mongodb-data:/data/db
+      - mongodb-log:/var/log/mongodb
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
   mongo-express:
     image: mongo-express:latest
@@ -29,8 +31,8 @@ services:
     ports:
       - "8081:8081"
 
-#volumes:
-#  mongodbdata:
-#    driver: local
-
-# TODO: consider if enabling volumes or not!
+volumes:
+  mongodb-data:
+    driver: local
+  mongodb-log:
+    driver: local
